--- a/ifc/templates/users/members.html
+++ b/ifc/templates/users/members.html
@@ -5,3 +5,8 @@
     <h3>This is the members-only page.</h3>
 {% endblock %}
 
+{% block js %}
+  {% assets "guest_list_js" %}
+      <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+  {% endassets %}
+{% endblock %}
