Tightens up the guest lists a bit

--- a/ifc/templates/party/guests.html
+++ b/ifc/templates/party/guests.html
@@ -35,9 +35,9 @@
       </div>
     </div>
     <div class="row">
-      <div id="male-guest-list" class="col-xs-6 col-md-6">
+      <div id="male-guest-list" class="col-xs-5 col-md-5 col-xs-offset-1">
       </div>
-      <div id="female-guest-list" class="col-xs-6 col-md-6">
+      <div id="female-guest-list" class="col-xs-5 col-md-5 col-xs-offset-1">
       </div>
     </div>
   </div>
