Cascade deletes, starting parties, checking in and out guests, guest/brother search, guest count, styling, and cleaning up some misc things.

--- a/ifc/templates/layout.html
+++ b/ifc/templates/layout.html
@@ -16,6 +16,7 @@
   </title>
   <meta name="description" content="{% block meta_description %}{% endblock %}">
   <meta name="author" content="{% block meta_author %}{% endblock %}">
+  {% block meta %}{% endblock %}
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width">
