--- a/ifc/templates/party/guests.html
+++ b/ifc/templates/party/guests.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block meta %}
+  <meta name="started" content="{{ party.started }}">
+{% endblock %}
 {% block css %}
   {% assets "guest_list_css" %}
     <link rel="stylesheet" href="{{ ASSET_URL }}">
@@ -21,6 +24,12 @@
     <div class="row">
       <div class="col-xs-5 col-md-5 col-xs-offset-1 guest-entry-row">
         <h4 class="add-guest-header">Men</h4>
+        <div class="text-muted em">
+          {% if party.started %}
+            Men checked in: <span id="male-count"></span></div>
+          {% else %}
+            Men on list: <span id="male-count"></span></div>
+          {% endif %}
         <div id="add-male" class="form-group form-inline">
           <input type="text" class="form-control enter-user-name" id="add-male-name" placeholder="Add Male Guest">
           <button class="btn btn-info add-user-btn" id="add-male-btn"><i class="fa fa-icon fa-plus"></i></button>
@@ -28,6 +37,12 @@
       </div>
       <div class="col-xs-5 col-md-5 col-xs-offset-1 guest-entry-row">
         <h4 class="add-guest-header">Women</h4>
+        <div class="text-muted em">
+          {% if party.started %}
+            Women checked in: <span id="female-count"></span></div>
+          {% else %}
+            Women on list: <span id="female-count"></span></div>
+          {% endif %}
         <div id="add-female" class="form-group form-inline">
           <input type="text" class="form-control enter-user-name" id="add-female-name" placeholder="Add Female Guest">
           <button class="btn btn-info add-user-btn" id="add-female-btn"><i class="fa fa-icon fa-plus"></i></button>
