--- a/ifc/templates/party/list.html
+++ b/ifc/templates/party/list.html
@@ -14,7 +14,7 @@
     <table class="table table-hover">
       <thead>
         <tr>
-          {% if current_user.can_delete_party %}
+          {% if current_user.can_delete_party(party) %}
             <th class="col-xs-5"> Party Name </th>
             <th class="col-xs-2"> Date </th>
             <th class="col-xs-2"> Guest List </th>
@@ -39,14 +39,14 @@
                 </div>
               </a>
             </td>
-            {% if current_user.can_delete_party %}
+            {% if current_user.can_delete_party(party) %}
               <td>
                 {% if not party.started %}
                 <form action={{ url_for('party.start_party', id=party.id) }} method="post">
-                  <input type="submit" class="btn btn-info" value="Start Party">
+                  <input type="submit" class="btn btn-warning" value="Start Party">
                 </form>
                 {% else %}
-                  It's lit, fam.
+                <button type="button" class="btn btn-info" disabled="disabled">Started</button>
                 {% endif %}
               </td>
               <td>
