--- a/ifc/templates/nav.html
+++ b/ifc/templates/nav.html
@@ -19,7 +19,7 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
-      <li><a href="{{ url_for('party.parties') }}">Home</a></li>
+      <li><a href="{{ url_for('parties.parties') }}">Home</a></li>
       <li><a href="{{ url_for('public.about') }}">About</a></li>
       {% if current_user and current_user.is_site_admin %}
         <li><a href="{{ url_for('admin.index') }}">Admin</a></li>
