Adds an expected release date for reports adds the version to the footer, and adds an animation to the reload indicator.

--- a/ifc/templates/footer.html
+++ b/ifc/templates/footer.html
@@ -2,6 +2,8 @@
   <small>
   <ul class="company">
     <li>© Ryan Baker</li>
+    <li>●</li>
+    <li id="version-indicator"></li>
   </ul>
 
     <ul class="footer-nav">
