--- a/ifc/templates/report/index.html
+++ b/ifc/templates/report/index.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <h2>Coming soon!</h2>
+<h5>Expected release: mid January 2017</h5>
 {% endblock %}
 
 {% block js %}
