--- a/ifc/templates/nav.html
+++ b/ifc/templates/nav.html
@@ -12,7 +12,7 @@
     </button>
     <a class="navbar-brand" href="{{ url_for('public.home') }}">
 
-      WPI IFC
+      {{ current_user.school_name }} IFC
 
     </a>
   </div>
@@ -24,6 +24,20 @@
       {% if current_user and current_user.is_site_admin %}
         <li><a href="{{ url_for('admin.index') }}">Admin</a></li>
         <li><a href="{{ url_for('ingest.upload_file') }}">Ingest</a></li>
+      {% endif %}
+      {% if current_user and current_user.is_admin %}
+        <li class="dropdown">
+           <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown"
+             role="button" aria-haspopup="true" aria-expanded="false">
+             Change Fraternity
+             <span class="caret"></span>
+             <ul class="dropdown-menu">
+              {% for frat in fraternities %}
+              <li><a href="{{ url_for('public.change_fraternity', frat_id=frat.id) }}">{{ frat.school.title }} | {{ frat.title }}</a></li>
+              {% endfor %}
+             </ul>
+           </a>
+        </li>
       {% endif %}
     </ul>
     {% if current_user and current_user.is_authenticated %}
