--- a/ifc/templates/public/register.html
+++ b/ifc/templates/public/register.html
@@ -7,8 +7,8 @@
     <form id="registerForm" class="form form-register" method="POST" action="" role="form">
             {{ form.hidden_tag() }}
             <div class="form-group">
-                {{form.username.label}}
-                {{form.username(placeholder="Username", class_="form-control")}}
+                {{form.email.label}}
+                {{form.email(placeholder="Email", class_="form-control")}}
             </div>
             <div class="form-group">
                 {{form.password.label}}
