Updates the report endpoint for a party to show some simple stats.

--- a/ifc/templates/public/home.html
+++ b/ifc/templates/public/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="jumbotron text-center">
 
-  <h1>Welcome to WPI IFC</h1>
+  <h1>{{ current_user.school_name }} IFC Party List Manager</h1>
 
   <p>This site is for fraternity members to manage their chapter's social events.</p>
 </div>
