--- a/ifc/templates/party/list.html
+++ b/ifc/templates/party/list.html
@@ -62,7 +62,7 @@
               </td>
             {% endif %}
             <td>
-              <a href={{ url_for('parties.report', party_id=party.id) }}>
+              <a href={{ url_for('parties.show_report', party_id=party.id) }}>
                 <div class="btn btn-info btn-sm">
                   <i class="fa fa-icon fa-area-chart"></i>
                 </div>
