--- a/ifc/templates/report/index.html
+++ b/ifc/templates/report/index.html
@@ -1,7 +1,75 @@
 {% extends "layout.html" %}
+
+{% block css %}
+  {% assets "report_css" %}
+    <link rel="stylesheet" href="{{ ASSET_URL }}">
+  {% endassets %}
+{% endblock %}
+
 {% block content %}
-<h2>Coming soon!</h2>
-<h5>Expected release: mid January 2017</h5>
+<div class="container">
+  <div class="banner">
+    <h5 class="text-center">
+      Report for {{ party.fraternity.title }}'s party
+    </h5>
+    <h3 class="text-center">
+      (In Beta)
+    </h3>
+    <h2 class="text-center">
+      {{ party.name }}
+    </h2>
+  </div>
+  <div class="row">
+    <div class="chart-rect col-md-4 col-md-offset-1 col-xs-8 col-xs-offset-2">
+      <div class="chart-title h4 text-center">
+        Attendance Percentage
+      </div>
+      <div class="chart-container" id="attendance">
+        <div class="loading text-center">
+          <i class="fa fa-spinner fa-pulse"></i>
+        </div>
+      </div>
+      <div class="chart-footer text-center">
+        <p class="small">Total guests on list: <span id="attendance-total"></span></p>
+      </div>
+    </div><!-- attendance arc -->
+
+    <div class="chart-rect col-md-4 col-md-offset-2 col-xs-8 col-xs-offset-2">
+      <div class="chart-title h4 text-center">
+        Guest Attendance Ratios
+      </div>
+      <div class="chart-container" id="host-attendance">
+        <div class="loading text-center">
+          <i class="fa fa-spinner fa-pulse"></i>
+        </div>
+      </div>
+      <div class="chart-footer text-center">
+        <nav aria-label="Page navigation">
+          <ul class="pagination pagination-sm">
+          </ul>
+        </nav>
+      </div>
+    </div><!-- host attendance table -->
+  </div><!-- row -->
+
+  <div class="row">
+    <div class="chart-rect col-xs-offset-1 col-xs-10" id="population-container">
+      <div class="chart-title h4 text-center">
+        Population Over Time
+      </div>
+      <div class="chart-container text-center" id="population-chart">
+        <div class="loading text-center">
+          <i class="fa fa-spinner fa-pulse"></i>
+        </div>
+      </div>
+      <div class="chart-footer text-center" id="population-footer">
+        <div>
+          <span class="well alert-info" id="pop-guests">NUMBER OF</span> guests at <span class="well alert-info" id="pop-time">TIME</span>
+        </div>
+      </div>
+    </div><!-- population chart -->
+  </div><!-- row -->
+</div>
 {% endblock %}
 
 {% block js %}
