--- a/ifc/templates/footer.html
+++ b/ifc/templates/footer.html
@@ -10,7 +10,7 @@
 
       <li><a href="{{ url_for('public.about') }}">About</a></li>
 
-      <li><a href="mailto:ryan.da.baker@gmail.com">Contact</a></li>
+      <li><a href="#contact-click">Contact</a></li>
     </ul>
   </small>
 </footer>
