--- a/ifc/templates/nav.html
+++ b/ifc/templates/nav.html
@@ -25,6 +25,18 @@
         <li><a href="{{ url_for('admin.index') }}">Admin</a></li>
         <li><a href="{{ url_for('ingest.upload_file') }}">Ingest</a></li>
       {% endif %}
+      {% if current_user and current_user.can_manage_fraternity %}
+        <li class="dropdown">
+           <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown"
+             role="button" aria-haspopup="true" aria-expanded="false">
+             Manage
+             <span class="caret"></span>
+             <ul class="dropdown-menu">
+               <li><a href="{{ url_for('manage.guest_capacity') }}">Brother guest capacity</a></li>
+             </ul>
+           </a>
+        </li>
+      {% endif %}
       {% if current_user and current_user.is_admin %}
         <li class="dropdown">
            <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown"
