Makes the population chart slick.

--- a/ifc/templates/report/index.html
+++ b/ifc/templates/report/index.html
@@ -58,6 +58,9 @@
         Population Over Time
       </div>
       <div class="chart-container text-center" id="population-chart">
+        <canvas id="myChart" width="400px" height="400px"></canvas>
+      </div>
+      <!--<div class="chart-container text-center" id="population-chart">
         <div class="loading text-center">
           <i class="fa fa-spinner fa-pulse"></i>
         </div>
@@ -66,9 +69,10 @@
         <div>
           <span class="well alert-info" id="pop-guests">NUMBER OF</span> guests at <span class="well alert-info" id="pop-time">TIME</span>
         </div>
-      </div>
+      </div>-->
     </div><!-- population chart -->
   </div><!-- row -->
+
 </div>
 {% endblock %}
 
