--- a/ifc/templates/report/index.html
+++ b/ifc/templates/report/index.html
@@ -12,9 +12,6 @@
     <h5 class="text-center">
       Report for {{ party.fraternity.title }}'s party
     </h5>
-    <h3 class="text-center">
-      (In Beta)
-    </h3>
     <h2 class="text-center">
       {{ party.name }}
     </h2>
@@ -22,13 +19,9 @@
   <div class="row">
     <div class="chart-rect col-md-4 col-md-offset-1 col-xs-8 col-xs-offset-2">
       <div class="chart-title h4 text-center">
-        Attendance Percentage
+        Attendance Cohorts
       </div>
-      <div class="chart-container" id="attendance">
-        <div class="loading text-center">
-          <i class="fa fa-spinner fa-pulse"></i>
-        </div>
-      </div>
+      <canvas id="rawAttendance" width="400px" height="400px"></canvas>
       <div class="chart-footer text-center">
         <p class="small">Total guests on list: <span id="attendance-total"></span></p>
       </div>
